# eth-trading-bot

./: README.md
broker/: app.py
engine/: CMakeLists.txt
engine/include/: data_client.hpp  ema.hpp  http.hpp  logger.hpp  order_placer.hpp  risk.hpp  strategy.hpp
engine/src/: data_client.cpp  ema.cpp  http.cpp  logger.cpp  main.cpp  order_placer.cpp  risk.cpp  strategy.cpp
